--- a/n2PROG3/src/main/resources/fxml/GuiAlunoo.fxml
+++ b/n2PROG3/src/main/resources/fxml/GuiAlunoo.fxml
@@ -20,7 +20,7 @@
       <Button fx:id="BtnSalvar" disable="true" layoutX="508.0" layoutY="162.0" mnemonicParsing="false" onAction="#Gravar_Click" text="Salvar" />
       <Button fx:id="BtnIncluir" layoutX="15.0" layoutY="361.0" mnemonicParsing="false" onAction="#incluir_click" text="Incluir" />
       <Button fx:id="BtnAlterar" layoutX="88.0" layoutY="361.0" mnemonicParsing="false" onAction="#altera_click" text="Alterar" />
-      <Button fx:id="BtnExcluir" layoutX="162.0" layoutY="361.0" mnemonicParsing="false" onAction="#excluir_click" text="Exluir" />
+      <Button fx:id="BtnExcluir" layoutX="162.0" layoutY="361.0" mnemonicParsing="false" onAction="#excluir_click" text="Excluir" />
       <TextField fx:id="TxtTelefone" disable="true" layoutX="407.0" layoutY="83.0" />
       <Label layoutX="330.0" layoutY="87.0" text="Telefone" />
       <TextField fx:id="TxtMatricula" disable="true" layoutX="407.0" layoutY="117.0" />
