--- a/n2PROG3/src/main/resources/fxml/Guilivro.fxml
+++ b/n2PROG3/src/main/resources/fxml/Guilivro.fxml
@@ -13,6 +13,7 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.femass.gui.Controllerlivro">
    <children>
       <ListView fx:id="LstLivros" layoutX="14.0" layoutY="14.0" onKeyPressed="#keyPressed_teclaSelecionada" onMouseClicked="#valor_Selecionado" prefHeight="320.0" prefWidth="200.0" />
+      <ListView fx:id="LstAutores" layoutX="14.0" layoutY="14.0" onKeyPressed="#keyPressed_teclaSelecionada" onMouseClicked="#valor_Selecionado" prefHeight="320.0" prefWidth="200.0" />
       <Label layoutX="330.0" layoutY="19.0" text="Título:" />
      <TextField fx:id="TxtTitulolivro" disable="true" layoutX="407.0" layoutY="14.0" />
       <Button fx:id="BtnSalvar" disable="true" layoutX="508.0" layoutY="162.0" mnemonicParsing="false" onAction="#Gravar_Click" text="Salvar" />
