--- a/n2PROG3/src/main/resources/fxml/GuiAtendente.fxml
+++ b/n2PROG3/src/main/resources/fxml/GuiAtendente.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.femass.gui.ControllerAtendente">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="133.0" prefWidth="373.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.femass.gui.ControllerAtendente">
    <children>
-      <Button layoutX="88.0" layoutY="361.0" mnemonicParsing="false" onAction="#btnCadastrarLeitor" text="Cadastrar Leitor" />
- 
+      <Button layoutX="38.0" layoutY="32.0" mnemonicParsing="false" onAction="#btnCadastrarLeitor" text="Cadastrar Leitor" />
+    <Button layoutX="226.0" layoutY="32.0" mnemonicParsing="false" onAction="#btnCadastrarEmprestimo" text="Realizar Emprestimo" />
    </children>
 </Pane>
