--- a/n2PROG3/src/main/resources/fxml/Guilivro.fxml
+++ b/n2PROG3/src/main/resources/fxml/Guilivro.fxml
@@ -13,12 +13,11 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.femass.gui.Controllerlivro">
    <children>
       <ListView fx:id="LstLivros" layoutX="14.0" layoutY="14.0" onKeyPressed="#keyPressed_teclaSelecionada" onMouseClicked="#valor_Selecionado" prefHeight="320.0" prefWidth="200.0" />
-      <TextField fx:id="TxtTitulolivro" disable="true" layoutX="407.0" layoutY="14.0" />
-      <Button layoutX="29.0" layoutY="42.0" mnemonicParsing="false" onAction="#btnCadastrarExemplar" text="Cadastro de Exemplar"/>
-      <Button fx:id="BtnSalvar" disable="true" layoutX="508.0" layoutY="162.0" mnemonicParsing="false" onAction="#Gravar_Click" text="Salvar" /> 
+      <TextField fx:id="TxtTitulolivro" disable="true" layoutX="397.0" layoutY="28.0" />
+      <Button fx:id="BtnSalvar" disable="true" layoutX="500.0" layoutY="133.0" mnemonicParsing="false" onAction="#Gravar_Click" text="Salvar" /> 
       <Button fx:id="BtnIncluir" layoutX="15.0" layoutY="361.0" mnemonicParsing="false" onAction="#incluir_click" text="Incluir" />
       <Button fx:id="BtnAlterar" layoutX="88.0" layoutY="361.0" mnemonicParsing="false" onAction="#altera_click" text="Alterar" />
       <Button fx:id="BtnExcluir" layoutX="162.0" layoutY="361.0" mnemonicParsing="false" onAction="#excluir_click" text="Excluir" />  
-      <ComboBox fx:id= "ComboBoxAutores" layoutX = "341.0 "  layoutY = "83.0 " prefHeight = "25.0 "prefWidth = "200.0 " /> </children>
-
+      <ComboBox fx:id= "ComboBoxAutores" layoutX = "397.0 "  layoutY = "71.0 " prefHeight = "25.0 " /> </children>
+      <Label layoutX="318.0" layoutY="32.0" prefHeight="17.0" prefWidth="58.0" text="Titulo:" />
 </Pane>
